<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    tools:context=".GuessGameActivity"
>

    <TextView
        android:id="@+id/titleGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/gameTitle"
        android:textColor="#3687FF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <EditText
        android:id="@+id/txtGuess"
        android:layout_marginTop="80dp"
        android:layout_width="488dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/titleGame"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/numberHint"
        android:importantForAutofill="no"
        android:inputType="number"
    />

    <Button
        android:id="@+id/btnPlay"
        android:layout_marginTop="10dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtGuess"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/playBtnTxt"
    />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/counterTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnPlay"
        android:layout_centerHorizontal="true"
        android:textColor="#03D119"
        android:text="@string/counterTxt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="11sp"
        android:textStyle="bold"
    />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/messageTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/counterTxt"
        android:layout_centerHorizontal="true"
        android:textColor="#0367D1"
        android:text="@string/messageTxt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="11sp"
        android:textStyle="bold"
    />



</RelativeLayout>