<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    tools:context=".CountryDetailsActivity"
>

    <TextView
        android:id="@+id/countryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/countryNameTitleTxt"
        android:textColor="#003C95"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/engCountryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/countryName"
        android:layout_centerHorizontal="true"
        android:textColor="#003C95"
        android:text="@string/EngCountryNameTxt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
    />

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/capitalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/engCountryName"
        android:layout_centerHorizontal="true"
        android:textColor="#003C95"
        android:text="@string/capitalInitTxt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
    />

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/abbreviationTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/capitalTxt"
        android:layout_centerHorizontal="true"
        android:textColor="#003C95"
        android:text="@string/abbreviationInitTxt"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
    />

    <ImageView
        android:layout_marginTop="50dp"
        android:id="@+id/countryFlagPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/abbreviationTxt"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/picDescriptionTxt"
    />



</RelativeLayout>